[package]
name = "cursive-backend-wasm"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
cursive = { git = "https://github.com/Riey/cursive", branch = "wasm", default-features = false }
wasm-bindgen = "0.2.51"
unicode-width = "0.1.6"
log = "0.4.8"

[dependencies.web-sys]
version = "0.3.28"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ContextAttributes2d",
    "TextMetrics",
    "HtmlDivElement",
    "HtmlSpanElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "CompositionEvent",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
]
