[package]
name = "cursive-backend-wasm"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[features]
default = ["canvas", "composition", "worker-2d"]
composition = [
    "web-sys/CompositionEvent",
    "web-sys/EventTarget",
]
canvas = [
    "web-sys/CanvasRenderingContext2d",
    "web-sys/ContextAttributes2d",
    "web-sys/TextMetrics",
]
worker-2d = [
    "web-sys/OffscreenCanvas",
    "web-sys/CanvasRenderingContext2d",
    "web-sys/ContextAttributes2d",
    "web-sys/TextMetrics",
    "web-sys/ImageBitmap",
    "web-sys/DedicatedWorkerGlobalScope",
]

[dependencies]
cursive = { git = "https://github.com/Riey/cursive", branch = "wasm", default-features = false }
wasm-bindgen = "0.2.51"
unicode-width = "0.1.6"
log = "0.4.8"
num-traits = { version = "0.2.8", features = ["i128"] }
js-sys = "0.3.28"

[dependencies.web-sys]
version = "0.3.28"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
]
